// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`puppeteer > puppeteer 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
      "es2026": true,
      "node": true,
    },
    "ignorePatterns": [
      "**/node_modules",
      "**/build/",
      "**/lib/",
      "**/bin/",
      "**/*.tsbuildinfo",
      "**/*.api.json",
      "**/*.tgz",
      "**/yarn.lock",
      "**/.docusaurus/",
      "**/.cache-loader",
      "test/output-*/",
      "**/.dev_profile*",
      "**/coverage/",
      "**/generated/",
      "**/.eslintcache",
      "**/.cache/",
      "**/.vscode",
      "!.vscode/extensions.json",
      "!.vscode/*.template.json",
      "**/.devcontainer",
      "**/.DS_Store",
      "**/.env.local",
      "**/.env.development.local",
      "**/.env.test.local",
      "**/.env.production.local",
      "**/npm-debug.log*",
      "**/yarn-debug.log*",
      "**/yarn-error.log*",
      "**/.wireit",
      "**/assets/",
      "**/third_party/",
      "packages/ng-schematics/sandbox/**/*",
      "packages/ng-schematics/multi/**/*",
      "packages/ng-schematics/src/**/files/",
      "examples/puppeteer-in-browser/out/**/*",
      "examples/puppeteer-in-browser/node_modules/**/*",
      "examples/puppeteer-in-extension/out/**/*",
      "examples/puppeteer-in-extension/node_modules/**/*",
    ],
    "overrides": [
      {
        "files": [
          "**/*.ts",
        ],
        "plugins": [
          "typescript",
        ],
        "rules": {
          "constructor-super": "off",
          "no-array-constructor": "error",
          "no-class-assign": "off",
          "no-const-assign": "off",
          "no-dupe-class-members": "off",
          "no-dupe-keys": "off",
          "no-empty-function": "off",
          "no-func-assign": "off",
          "no-import-assign": "off",
          "no-new-native-nonconstructor": "off",
          "no-obj-calls": "off",
          "no-redeclare": "off",
          "no-setter-return": "off",
          "no-this-before-super": "off",
          "no-unsafe-negation": "off",
          "no-unused-expressions": "error",
          "no-unused-vars": [
            "error",
            {
              "argsIgnorePattern": "^_",
              "varsIgnorePattern": "^_",
            },
          ],
          "no-use-before-define": "off",
          "no-with": "off",
          "prefer-rest-params": "error",
          "prefer-spread": "error",
          "typescript/adjacent-overload-signatures": "error",
          "typescript/array-type": [
            "error",
            {
              "default": "array-simple",
            },
          ],
          "typescript/ban-ts-comment": "error",
          "typescript/ban-tslint-comment": "error",
          "typescript/class-literal-property-style": "error",
          "typescript/consistent-generic-constructors": "error",
          "typescript/consistent-indexed-object-style": "error",
          "typescript/consistent-type-assertions": "error",
          "typescript/consistent-type-definitions": [
            "error",
            "interface",
          ],
          "typescript/consistent-type-imports": "error",
          "typescript/explicit-function-return-type": "off",
          "typescript/explicit-module-boundary-types": "error",
          "typescript/no-confusing-non-null-assertion": "error",
          "typescript/no-duplicate-enum-values": "error",
          "typescript/no-empty-object-type": "error",
          "typescript/no-explicit-any": "off",
          "typescript/no-extra-non-null-assertion": "error",
          "typescript/no-import-type-side-effects": "error",
          "typescript/no-inferrable-types": "error",
          "typescript/no-misused-new": "error",
          "typescript/no-namespace": "error",
          "typescript/no-non-null-asserted-optional-chain": "error",
          "typescript/no-non-null-assertion": "off",
          "typescript/no-require-imports": "error",
          "typescript/no-this-alias": "error",
          "typescript/no-unnecessary-type-constraint": "error",
          "typescript/no-unsafe-declaration-merging": "error",
          "typescript/no-unsafe-function-type": "error",
          "typescript/no-wrapper-object-types": "error",
          "typescript/prefer-as-const": "error",
          "typescript/prefer-for-of": "error",
          "typescript/prefer-function-type": "error",
          "typescript/prefer-namespace-keyword": "error",
          "typescript/prefer-ts-expect-error": "error",
          "typescript/triple-slash-reference": "error",
        },
      },
      {
        "files": [
          "packages/puppeteer-core/src/**/*.ts",
        ],
        "rules": {
          "no-restricted-imports": [
            "error",
            {
              "paths": [],
              "patterns": [
                "*Events",
                "*.test.js",
              ],
            },
          ],
        },
      },
      {
        "files": [
          "test/**/*.ts",
        ],
        "rules": {
          "no-restricted-imports": [
            "error",
            {
              "patterns": [
                "*src*",
              ],
            },
          ],
        },
      },
      {
        "files": [
          "test/**/*.spec.ts",
        ],
        "plugins": [
          "typescript",
        ],
        "rules": {
          "no-unused-vars": [
            "error",
            {
              "argsIgnorePattern": "^_",
              "varsIgnorePattern": "^_",
            },
          ],
        },
      },
    ],
    "plugins": [
      "unicorn",
      "import",
    ],
    "rules": {
      "accessor-pairs": [
        "error",
        {
          "getWithoutSet": false,
          "setWithoutGet": false,
        },
      ],
      "arrow-body-style": [
        "error",
        "always",
      ],
      "curly": [
        "error",
        "all",
      ],
      "eqeqeq": [
        "error",
      ],
      "import/no-cycle": [
        "error",
        {
          "maxDepth": Infinity,
        },
      ],
      "no-caller": "error",
      "no-cond-assign": "error",
      "no-debugger": "error",
      "no-dupe-keys": "error",
      "no-duplicate-case": "error",
      "no-empty-character-class": "error",
      "no-labels": "error",
      "no-multi-str": "error",
      "no-self-compare": "error",
      "no-shadow-restricted-names": "error",
      "no-unsafe-negation": "error",
      "no-unused-vars": [
        "error",
        {
          "args": "none",
          "vars": "local",
          "varsIgnorePattern": "([fx]?describe|[fx]?it|beforeAll|beforeEach|afterAll|afterEach)",
        },
      ],
      "no-var": "error",
      "no-with": "error",
      "prefer-const": "error",
      "radix": "error",
      "require-yield": "error",
      "valid-typeof": "error",
    },
  },
  "skipped": {
    "js-plugins": [
      "prettier/prettier",
      "mocha/no-exclusive-tests",
      "@stylistic/function-call-spacing",
      "@stylistic/semi",
      "@puppeteer/prettier-comments",
      "@puppeteer/extensions",
      "@puppeteer/check-license",
      "@puppeteer/use-using",
      "tsdoc/syntax",
      "mocha/no-pending-tests",
      "mocha/no-identical-title",
      "@puppeteer/no-quirks-mode-set-content",
    ],
    "not-implemented": [
      "no-implied-eval",
      "no-restricted-syntax",
    ],
    "nursery": [
      "no-unreachable",
    ],
    "type-aware": [
      "@typescript-eslint/no-unnecessary-template-expression",
      "@typescript-eslint/no-floating-promises",
      "@typescript-eslint/return-await",
      "@typescript-eslint/consistent-type-exports",
    ],
    "unsupported": [
      "spaced-comment",
      "new-parens",
      "max-len",
      "no-new-object",
      "no-octal-escape",
      "template-curly-spacing",
      "import/order",
      "import/enforce-node-protocol-usage",
    ],
  },
  "warnings": [
    "Settings not migrated (not supported by oxlint):
\`import/extensions\`
\`import/external-module-folders\`
\`import/parsers\`
\`import/resolver\`",
    "Settings not migrated (not supported by oxlint):
\`import/resolver\`",
  ],
}
`;

exports[`puppeteer --js-plugins > puppeteer--js-plugins 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
      "es2026": true,
      "node": true,
    },
    "ignorePatterns": [
      "**/node_modules",
      "**/build/",
      "**/lib/",
      "**/bin/",
      "**/*.tsbuildinfo",
      "**/*.api.json",
      "**/*.tgz",
      "**/yarn.lock",
      "**/.docusaurus/",
      "**/.cache-loader",
      "test/output-*/",
      "**/.dev_profile*",
      "**/coverage/",
      "**/generated/",
      "**/.eslintcache",
      "**/.cache/",
      "**/.vscode",
      "!.vscode/extensions.json",
      "!.vscode/*.template.json",
      "**/.devcontainer",
      "**/.DS_Store",
      "**/.env.local",
      "**/.env.development.local",
      "**/.env.test.local",
      "**/.env.production.local",
      "**/npm-debug.log*",
      "**/yarn-debug.log*",
      "**/yarn-error.log*",
      "**/.wireit",
      "**/assets/",
      "**/third_party/",
      "packages/ng-schematics/sandbox/**/*",
      "packages/ng-schematics/multi/**/*",
      "packages/ng-schematics/src/**/files/",
      "examples/puppeteer-in-browser/out/**/*",
      "examples/puppeteer-in-browser/node_modules/**/*",
      "examples/puppeteer-in-extension/out/**/*",
      "examples/puppeteer-in-extension/node_modules/**/*",
    ],
    "jsPlugins": [
      "eslint-plugin-prettier",
      "eslint-plugin-mocha",
      "@stylistic/eslint-plugin",
      "@puppeteer/eslint-plugin",
    ],
    "overrides": [
      {
        "files": [
          "**/*.ts",
        ],
        "jsPlugins": [
          "@puppeteer/eslint-plugin",
        ],
        "plugins": [
          "typescript",
        ],
        "rules": {
          "@puppeteer/use-using": "error",
          "constructor-super": "off",
          "no-array-constructor": "error",
          "no-class-assign": "off",
          "no-const-assign": "off",
          "no-dupe-class-members": "off",
          "no-dupe-keys": "off",
          "no-empty-function": "off",
          "no-func-assign": "off",
          "no-import-assign": "off",
          "no-new-native-nonconstructor": "off",
          "no-obj-calls": "off",
          "no-redeclare": "off",
          "no-setter-return": "off",
          "no-this-before-super": "off",
          "no-unsafe-negation": "off",
          "no-unused-expressions": "error",
          "no-unused-vars": [
            "error",
            {
              "argsIgnorePattern": "^_",
              "varsIgnorePattern": "^_",
            },
          ],
          "no-use-before-define": "off",
          "no-with": "off",
          "prefer-rest-params": "error",
          "prefer-spread": "error",
          "typescript/adjacent-overload-signatures": "error",
          "typescript/array-type": [
            "error",
            {
              "default": "array-simple",
            },
          ],
          "typescript/ban-ts-comment": "error",
          "typescript/ban-tslint-comment": "error",
          "typescript/class-literal-property-style": "error",
          "typescript/consistent-generic-constructors": "error",
          "typescript/consistent-indexed-object-style": "error",
          "typescript/consistent-type-assertions": "error",
          "typescript/consistent-type-definitions": [
            "error",
            "interface",
          ],
          "typescript/consistent-type-imports": "error",
          "typescript/explicit-function-return-type": "off",
          "typescript/explicit-module-boundary-types": "error",
          "typescript/no-confusing-non-null-assertion": "error",
          "typescript/no-duplicate-enum-values": "error",
          "typescript/no-empty-object-type": "error",
          "typescript/no-explicit-any": "off",
          "typescript/no-extra-non-null-assertion": "error",
          "typescript/no-import-type-side-effects": "error",
          "typescript/no-inferrable-types": "error",
          "typescript/no-misused-new": "error",
          "typescript/no-namespace": "error",
          "typescript/no-non-null-asserted-optional-chain": "error",
          "typescript/no-non-null-assertion": "off",
          "typescript/no-require-imports": "error",
          "typescript/no-this-alias": "error",
          "typescript/no-unnecessary-type-constraint": "error",
          "typescript/no-unsafe-declaration-merging": "error",
          "typescript/no-unsafe-function-type": "error",
          "typescript/no-wrapper-object-types": "error",
          "typescript/prefer-as-const": "error",
          "typescript/prefer-for-of": "error",
          "typescript/prefer-function-type": "error",
          "typescript/prefer-namespace-keyword": "error",
          "typescript/prefer-ts-expect-error": "error",
          "typescript/triple-slash-reference": "error",
        },
      },
      {
        "files": [
          "packages/puppeteer-core/src/**/*.ts",
        ],
        "rules": {
          "no-restricted-imports": [
            "error",
            {
              "paths": [],
              "patterns": [
                "*Events",
                "*.test.js",
              ],
            },
          ],
        },
      },
      {
        "files": [
          "packages/**/*.ts",
        ],
        "jsPlugins": [
          "eslint-plugin-tsdoc",
        ],
        "rules": {
          "tsdoc/syntax": "error",
        },
      },
      {
        "files": [
          "test/**/*.ts",
        ],
        "rules": {
          "no-restricted-imports": [
            "error",
            {
              "patterns": [
                "*src*",
              ],
            },
          ],
        },
      },
      {
        "files": [
          "test/**/*.spec.ts",
        ],
        "jsPlugins": [
          "eslint-plugin-mocha",
          "@puppeteer/eslint-plugin",
        ],
        "plugins": [
          "typescript",
        ],
        "rules": {
          "@puppeteer/no-quirks-mode-set-content": "error",
          "mocha/no-identical-title": "error",
          "mocha/no-pending-tests": "error",
          "no-unused-vars": [
            "error",
            {
              "argsIgnorePattern": "^_",
              "varsIgnorePattern": "^_",
            },
          ],
        },
      },
    ],
    "plugins": [
      "unicorn",
      "import",
    ],
    "rules": {
      "@puppeteer/check-license": "error",
      "@puppeteer/extensions": "error",
      "@puppeteer/prettier-comments": "error",
      "@stylistic/function-call-spacing": "error",
      "@stylistic/semi": "error",
      "accessor-pairs": [
        "error",
        {
          "getWithoutSet": false,
          "setWithoutGet": false,
        },
      ],
      "arrow-body-style": [
        "error",
        "always",
      ],
      "curly": [
        "error",
        "all",
      ],
      "eqeqeq": [
        "error",
      ],
      "import/no-cycle": [
        "error",
        {
          "maxDepth": Infinity,
        },
      ],
      "mocha/no-exclusive-tests": "error",
      "no-caller": "error",
      "no-cond-assign": "error",
      "no-debugger": "error",
      "no-dupe-keys": "error",
      "no-duplicate-case": "error",
      "no-empty-character-class": "error",
      "no-labels": "error",
      "no-multi-str": "error",
      "no-self-compare": "error",
      "no-shadow-restricted-names": "error",
      "no-unsafe-negation": "error",
      "no-unused-vars": [
        "error",
        {
          "args": "none",
          "vars": "local",
          "varsIgnorePattern": "([fx]?describe|[fx]?it|beforeAll|beforeEach|afterAll|afterEach)",
        },
      ],
      "no-var": "error",
      "no-with": "error",
      "prefer-const": "error",
      "prettier/prettier": "error",
      "radix": "error",
      "require-yield": "error",
      "valid-typeof": "error",
    },
  },
  "skipped": {
    "js-plugins": [],
    "not-implemented": [
      "no-implied-eval",
      "no-restricted-syntax",
    ],
    "nursery": [
      "no-unreachable",
    ],
    "type-aware": [
      "@typescript-eslint/no-unnecessary-template-expression",
      "@typescript-eslint/no-floating-promises",
      "@typescript-eslint/return-await",
      "@typescript-eslint/consistent-type-exports",
    ],
    "unsupported": [
      "spaced-comment",
      "new-parens",
      "max-len",
      "no-new-object",
      "no-octal-escape",
      "template-curly-spacing",
      "import/order",
      "import/enforce-node-protocol-usage",
    ],
  },
  "warnings": [
    "Settings not migrated (not supported by oxlint):
\`import/extensions\`
\`import/external-module-folders\`
\`import/parsers\`
\`import/resolver\`",
    "Settings not migrated (not supported by oxlint):
\`import/resolver\`",
  ],
}
`;

exports[`puppeteer --type-aware > puppeteer--type-aware 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
      "es2026": true,
      "node": true,
    },
    "ignorePatterns": [
      "**/node_modules",
      "**/build/",
      "**/lib/",
      "**/bin/",
      "**/*.tsbuildinfo",
      "**/*.api.json",
      "**/*.tgz",
      "**/yarn.lock",
      "**/.docusaurus/",
      "**/.cache-loader",
      "test/output-*/",
      "**/.dev_profile*",
      "**/coverage/",
      "**/generated/",
      "**/.eslintcache",
      "**/.cache/",
      "**/.vscode",
      "!.vscode/extensions.json",
      "!.vscode/*.template.json",
      "**/.devcontainer",
      "**/.DS_Store",
      "**/.env.local",
      "**/.env.development.local",
      "**/.env.test.local",
      "**/.env.production.local",
      "**/npm-debug.log*",
      "**/yarn-debug.log*",
      "**/yarn-error.log*",
      "**/.wireit",
      "**/assets/",
      "**/third_party/",
      "packages/ng-schematics/sandbox/**/*",
      "packages/ng-schematics/multi/**/*",
      "packages/ng-schematics/src/**/files/",
      "examples/puppeteer-in-browser/out/**/*",
      "examples/puppeteer-in-browser/node_modules/**/*",
      "examples/puppeteer-in-extension/out/**/*",
      "examples/puppeteer-in-extension/node_modules/**/*",
    ],
    "options": {
      "typeAware": true,
    },
    "overrides": [
      {
        "files": [
          "**/*.ts",
        ],
        "plugins": [
          "typescript",
        ],
        "rules": {
          "constructor-super": "off",
          "no-array-constructor": "error",
          "no-class-assign": "off",
          "no-const-assign": "off",
          "no-dupe-class-members": "off",
          "no-dupe-keys": "off",
          "no-empty-function": "off",
          "no-func-assign": "off",
          "no-import-assign": "off",
          "no-new-native-nonconstructor": "off",
          "no-obj-calls": "off",
          "no-redeclare": "off",
          "no-setter-return": "off",
          "no-this-before-super": "off",
          "no-unsafe-negation": "off",
          "no-unused-expressions": "error",
          "no-unused-vars": [
            "error",
            {
              "argsIgnorePattern": "^_",
              "varsIgnorePattern": "^_",
            },
          ],
          "no-use-before-define": "off",
          "no-with": "off",
          "prefer-rest-params": "error",
          "prefer-spread": "error",
          "typescript/adjacent-overload-signatures": "error",
          "typescript/array-type": [
            "error",
            {
              "default": "array-simple",
            },
          ],
          "typescript/ban-ts-comment": "error",
          "typescript/ban-tslint-comment": "error",
          "typescript/class-literal-property-style": "error",
          "typescript/consistent-generic-constructors": "error",
          "typescript/consistent-indexed-object-style": "error",
          "typescript/consistent-type-assertions": "error",
          "typescript/consistent-type-definitions": [
            "error",
            "interface",
          ],
          "typescript/consistent-type-exports": "error",
          "typescript/consistent-type-imports": "error",
          "typescript/explicit-function-return-type": "off",
          "typescript/explicit-module-boundary-types": "error",
          "typescript/no-confusing-non-null-assertion": "error",
          "typescript/no-duplicate-enum-values": "error",
          "typescript/no-empty-object-type": "error",
          "typescript/no-explicit-any": "off",
          "typescript/no-extra-non-null-assertion": "error",
          "typescript/no-floating-promises": [
            "error",
            {
              "ignoreIIFE": true,
              "ignoreVoid": true,
            },
          ],
          "typescript/no-import-type-side-effects": "error",
          "typescript/no-inferrable-types": "error",
          "typescript/no-misused-new": "error",
          "typescript/no-namespace": "error",
          "typescript/no-non-null-asserted-optional-chain": "error",
          "typescript/no-non-null-assertion": "off",
          "typescript/no-require-imports": "error",
          "typescript/no-this-alias": "error",
          "typescript/no-unnecessary-template-expression": "error",
          "typescript/no-unnecessary-type-constraint": "error",
          "typescript/no-unsafe-declaration-merging": "error",
          "typescript/no-unsafe-function-type": "error",
          "typescript/no-wrapper-object-types": "error",
          "typescript/prefer-as-const": "error",
          "typescript/prefer-for-of": "error",
          "typescript/prefer-function-type": "error",
          "typescript/prefer-namespace-keyword": "error",
          "typescript/prefer-ts-expect-error": "error",
          "typescript/return-await": [
            "error",
            "always",
          ],
          "typescript/triple-slash-reference": "error",
        },
      },
      {
        "files": [
          "packages/puppeteer-core/src/**/*.ts",
        ],
        "rules": {
          "no-restricted-imports": [
            "error",
            {
              "paths": [],
              "patterns": [
                "*Events",
                "*.test.js",
              ],
            },
          ],
        },
      },
      {
        "files": [
          "packages/puppeteer-core/src/**/*.test.ts",
          "tools/mocha-runner/src/test.ts",
        ],
        "plugins": [
          "typescript",
        ],
        "rules": {
          "typescript/no-floating-promises": "off",
        },
      },
      {
        "files": [
          "test/**/*.ts",
        ],
        "rules": {
          "no-restricted-imports": [
            "error",
            {
              "patterns": [
                "*src*",
              ],
            },
          ],
        },
      },
      {
        "files": [
          "test/**/*.spec.ts",
        ],
        "plugins": [
          "typescript",
        ],
        "rules": {
          "no-unused-vars": [
            "error",
            {
              "argsIgnorePattern": "^_",
              "varsIgnorePattern": "^_",
            },
          ],
        },
      },
    ],
    "plugins": [
      "unicorn",
      "import",
    ],
    "rules": {
      "accessor-pairs": [
        "error",
        {
          "getWithoutSet": false,
          "setWithoutGet": false,
        },
      ],
      "arrow-body-style": [
        "error",
        "always",
      ],
      "curly": [
        "error",
        "all",
      ],
      "eqeqeq": [
        "error",
      ],
      "import/no-cycle": [
        "error",
        {
          "maxDepth": Infinity,
        },
      ],
      "no-caller": "error",
      "no-cond-assign": "error",
      "no-debugger": "error",
      "no-dupe-keys": "error",
      "no-duplicate-case": "error",
      "no-empty-character-class": "error",
      "no-labels": "error",
      "no-multi-str": "error",
      "no-self-compare": "error",
      "no-shadow-restricted-names": "error",
      "no-unsafe-negation": "error",
      "no-unused-vars": [
        "error",
        {
          "args": "none",
          "vars": "local",
          "varsIgnorePattern": "([fx]?describe|[fx]?it|beforeAll|beforeEach|afterAll|afterEach)",
        },
      ],
      "no-var": "error",
      "no-with": "error",
      "prefer-const": "error",
      "radix": "error",
      "require-yield": "error",
      "valid-typeof": "error",
    },
  },
  "skipped": {
    "js-plugins": [
      "prettier/prettier",
      "mocha/no-exclusive-tests",
      "@stylistic/function-call-spacing",
      "@stylistic/semi",
      "@puppeteer/prettier-comments",
      "@puppeteer/extensions",
      "@puppeteer/check-license",
      "@puppeteer/use-using",
      "tsdoc/syntax",
      "mocha/no-pending-tests",
      "mocha/no-identical-title",
      "@puppeteer/no-quirks-mode-set-content",
    ],
    "not-implemented": [
      "no-implied-eval",
      "no-restricted-syntax",
    ],
    "nursery": [
      "no-unreachable",
    ],
    "type-aware": [],
    "unsupported": [
      "spaced-comment",
      "new-parens",
      "max-len",
      "no-new-object",
      "no-octal-escape",
      "template-curly-spacing",
      "import/order",
      "import/enforce-node-protocol-usage",
    ],
  },
  "warnings": [
    "Settings not migrated (not supported by oxlint):
\`import/extensions\`
\`import/external-module-folders\`
\`import/parsers\`
\`import/resolver\`",
    "Settings not migrated (not supported by oxlint):
\`import/resolver\`",
  ],
}
`;

exports[`puppeteer merge > puppeteer--merge 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "error",
      "perf": "error",
    },
    "env": {
      "builtin": true,
      "es2026": true,
      "node": true,
    },
    "ignorePatterns": [
      "**/node_modules",
      "**/build/",
      "**/lib/",
      "**/bin/",
      "**/*.tsbuildinfo",
      "**/*.api.json",
      "**/*.tgz",
      "**/yarn.lock",
      "**/.docusaurus/",
      "**/.cache-loader",
      "test/output-*/",
      "**/.dev_profile*",
      "**/coverage/",
      "**/generated/",
      "**/.eslintcache",
      "**/.cache/",
      "**/.vscode",
      "!.vscode/extensions.json",
      "!.vscode/*.template.json",
      "**/.devcontainer",
      "**/.DS_Store",
      "**/.env.local",
      "**/.env.development.local",
      "**/.env.test.local",
      "**/.env.production.local",
      "**/npm-debug.log*",
      "**/yarn-debug.log*",
      "**/yarn-error.log*",
      "**/.wireit",
      "**/assets/",
      "**/third_party/",
      "packages/ng-schematics/sandbox/**/*",
      "packages/ng-schematics/multi/**/*",
      "packages/ng-schematics/src/**/files/",
      "examples/puppeteer-in-browser/out/**/*",
      "examples/puppeteer-in-browser/node_modules/**/*",
      "examples/puppeteer-in-extension/out/**/*",
      "examples/puppeteer-in-extension/node_modules/**/*",
    ],
    "overrides": [
      {
        "files": [
          "**/*.ts",
        ],
        "plugins": [
          "typescript",
        ],
        "rules": {
          "constructor-super": "off",
          "no-array-constructor": "error",
          "no-class-assign": "off",
          "no-const-assign": "off",
          "no-dupe-class-members": "off",
          "no-dupe-keys": "off",
          "no-empty-function": "off",
          "no-func-assign": "off",
          "no-import-assign": "off",
          "no-new-native-nonconstructor": "off",
          "no-obj-calls": "off",
          "no-redeclare": "off",
          "no-setter-return": "off",
          "no-this-before-super": "off",
          "no-unsafe-negation": "off",
          "no-unused-expressions": "error",
          "no-unused-vars": [
            "error",
            {
              "argsIgnorePattern": "^_",
              "varsIgnorePattern": "^_",
            },
          ],
          "no-use-before-define": "off",
          "no-with": "off",
          "prefer-rest-params": "error",
          "prefer-spread": "error",
          "typescript/adjacent-overload-signatures": "error",
          "typescript/array-type": [
            "error",
            {
              "default": "array-simple",
            },
          ],
          "typescript/ban-ts-comment": "error",
          "typescript/ban-tslint-comment": "error",
          "typescript/class-literal-property-style": "error",
          "typescript/consistent-generic-constructors": "error",
          "typescript/consistent-indexed-object-style": "error",
          "typescript/consistent-type-assertions": "error",
          "typescript/consistent-type-definitions": [
            "error",
            "interface",
          ],
          "typescript/consistent-type-imports": "error",
          "typescript/explicit-function-return-type": "off",
          "typescript/explicit-module-boundary-types": "error",
          "typescript/no-confusing-non-null-assertion": "error",
          "typescript/no-duplicate-enum-values": "error",
          "typescript/no-empty-object-type": "error",
          "typescript/no-explicit-any": "off",
          "typescript/no-extra-non-null-assertion": "error",
          "typescript/no-import-type-side-effects": "error",
          "typescript/no-inferrable-types": "error",
          "typescript/no-misused-new": "error",
          "typescript/no-namespace": "error",
          "typescript/no-non-null-asserted-optional-chain": "error",
          "typescript/no-non-null-assertion": "off",
          "typescript/no-require-imports": "error",
          "typescript/no-this-alias": "error",
          "typescript/no-unnecessary-type-constraint": "error",
          "typescript/no-unsafe-declaration-merging": "error",
          "typescript/no-unsafe-function-type": "error",
          "typescript/no-wrapper-object-types": "error",
          "typescript/prefer-as-const": "error",
          "typescript/prefer-for-of": "error",
          "typescript/prefer-function-type": "error",
          "typescript/prefer-namespace-keyword": "error",
          "typescript/prefer-ts-expect-error": "error",
          "typescript/triple-slash-reference": "error",
        },
      },
      {
        "files": [
          "packages/puppeteer-core/src/**/*.ts",
        ],
        "rules": {
          "no-restricted-imports": [
            "error",
            {
              "paths": [],
              "patterns": [
                "*Events",
                "*.test.js",
              ],
            },
          ],
        },
      },
      {
        "files": [
          "test/**/*.ts",
        ],
        "rules": {
          "no-restricted-imports": [
            "error",
            {
              "patterns": [
                "*src*",
              ],
            },
          ],
        },
      },
      {
        "files": [
          "test/**/*.spec.ts",
        ],
        "plugins": [
          "typescript",
        ],
        "rules": {
          "no-unused-vars": [
            "error",
            {
              "argsIgnorePattern": "^_",
              "varsIgnorePattern": "^_",
            },
          ],
        },
      },
    ],
    "plugins": [
      "unicorn",
      "import",
    ],
    "rules": {
      "accessor-pairs": [
        "error",
        {
          "getWithoutSet": false,
          "setWithoutGet": false,
        },
      ],
      "eqeqeq": [
        "error",
      ],
      "import/no-cycle": [
        "error",
        {
          "maxDepth": Infinity,
        },
      ],
      "no-labels": "error",
      "no-multi-str": "error",
      "no-self-compare": "error",
      "no-unused-vars": [
        "error",
        {
          "args": "none",
          "vars": "local",
          "varsIgnorePattern": "([fx]?describe|[fx]?it|beforeAll|beforeEach|afterAll|afterEach)",
        },
      ],
      "no-var": "error",
      "prefer-const": "error",
      "radix": "error",
    },
  },
  "skipped": {
    "js-plugins": [
      "prettier/prettier",
      "mocha/no-exclusive-tests",
      "@stylistic/function-call-spacing",
      "@stylistic/semi",
      "@puppeteer/prettier-comments",
      "@puppeteer/extensions",
      "@puppeteer/check-license",
      "@puppeteer/use-using",
      "tsdoc/syntax",
      "mocha/no-pending-tests",
      "mocha/no-identical-title",
      "@puppeteer/no-quirks-mode-set-content",
    ],
    "not-implemented": [
      "no-implied-eval",
      "no-restricted-syntax",
    ],
    "nursery": [
      "no-unreachable",
    ],
    "type-aware": [
      "@typescript-eslint/no-unnecessary-template-expression",
      "@typescript-eslint/no-floating-promises",
      "@typescript-eslint/return-await",
      "@typescript-eslint/consistent-type-exports",
    ],
    "unsupported": [
      "spaced-comment",
      "new-parens",
      "max-len",
      "no-new-object",
      "no-octal-escape",
      "template-curly-spacing",
      "import/order",
      "import/enforce-node-protocol-usage",
    ],
  },
  "warnings": [
    "Settings not migrated (not supported by oxlint):
\`import/extensions\`
\`import/external-module-folders\`
\`import/parsers\`
\`import/resolver\`",
    "Settings not migrated (not supported by oxlint):
\`import/resolver\`",
  ],
}
`;
